Undo steps created for non-paint operations (brush size) #61948

Closed
opened 2019-02-25 19:46:09 +01:00 by Paul · 13 comments

System Information
Operating system: Win7/Win10
Graphics card: gtx1070/hd620

Blender Version
Broken:
(2.79b, 7ad367d023
(2.80, 893fa59831, blender2.8, 2019-02-25)
Worked: (optional) Im pretty sure on some older versions of 2.79 it worked differently)

Short description of error
Some of blender actions like changing brush size/brush strenght are considered in blenders undo/redo history.
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Create any mesh, cube is fine
  2. Go into sculpt mode/dynamic topology or texture paint
  3. Make few strokes
  4. Change brush size few times
  5. Make another stroke
  6. Hit undo and observe what is happening
    You should see that it will undo your stroke from step 5. then when you hit another undo, there will be nothing changed since you were changing brush size and then after few more undos you will undo strokes from step 3.
    Exact same problem when you redo.

How it should work.
Things like changing brush size/brush strenght/any other change like color picking and many more should not be in undo/redo list.

**System Information** Operating system: Win7/Win10 Graphics card: gtx1070/hd620 **Blender Version** Broken: (2.79b, 7ad367d0231d (2.80, 893fa598319e, blender2.8, 2019-02-25) Worked: (optional) Im pretty sure on some older versions of 2.79 it worked differently) **Short description of error** Some of blender actions like changing brush size/brush strenght are considered in blenders undo/redo history. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Create any mesh, cube is fine 2. Go into sculpt mode/dynamic topology or texture paint 3. Make few strokes 4. Change brush size few times 5. Make another stroke 6. Hit undo and observe what is happening You should see that it will undo your stroke from step 5. then when you hit another undo, there will be nothing changed since you were changing brush size and then after few more undos you will undo strokes from step 3. Exact same problem when you redo. How it should work. Things like changing brush size/brush strenght/any other change like color picking and many more should not be in undo/redo list.
Author

Added subscriber: @riceart

Added subscriber: @riceart

studio/blender-studio#62360 was marked as duplicate of this issue

studio/blender-studio#62360 was marked as duplicate of this issue
Campbell Barton changed title from Undo+Redo to Undo steps created for non-paint operations (brush size) 2019-02-26 03:55:41 +01:00

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht bug or not?

@brecht bug or not?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

That's up to @campbellbarton.

That's up to @campbellbarton.
Campbell Barton was assigned by Sebastian Parborg 2019-03-04 14:56:18 +01:00

It should properly handle these as undo steps or not add undo steps at all.

It wont be too much trouble to have it working as it was in 2.7x.

It should properly handle these as undo steps or not add undo steps at all. It wont be too much trouble to have it working as it was in 2.7x.

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

From studio/blender-studio#62360:

Currently when changing the brush size, strength and many more tool specific settings it is added to the undo history. I think there is a bigger design discussion behind this if this should even be allowed but the bug that is tied to this is that these steps, when undone are not actually undone.
They are just extra undo steps that do nothing. And since when sculpting, painting or drawing it is very common to very often change the size & strength of the current brush, the undo history gets flooded with undo steps that don't undo anything.

To add my take on how this should be fixed: Tool settings should never be included in the default undo history, just like interface changes have no undo steps.
My suggestion would be to perhaps add a second undo history for settings and interface changes, but only if these should still be undo-able.

From studio/blender-studio#62360: > Currently when changing the brush size, strength and many more tool specific settings it is added to the undo history. I think there is a bigger design discussion behind this if this should even be allowed but the bug that is tied to this is that these steps, when undone are not actually undone. > They are just extra undo steps that do nothing. And since when sculpting, painting or drawing it is very common to very often change the size & strength of the current brush, the undo history gets flooded with undo steps that don't undo anything. > > To add my take on how this should be fixed: Tool settings should never be included in the default undo history, just like interface changes have no undo steps. > My suggestion would be to perhaps add a second undo history for settings and interface changes, but only if these should still be undo-able.
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Worked around 4a08b974f4

Worked around 4a08b974f4

Added subscriber: @item412

Added subscriber: @item412
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61948
No description provided.